# flow-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  commands.html  flow_config.json  format_code.py  genindex.html  index.html  installation.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  run_test.py  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/flow_cli/: main.html
_modules/flow_cli/commands/: analyze.html  config.html  doctor.html
_modules/flow_cli/commands/android/: build.html  main.html  run.html
_modules/flow_cli/commands/generate/: icons.html  main.html  splash.html
_modules/flow_cli/commands/ios/: main.html  run.html
_modules/flow_cli/core/: flutter.html
_modules/flow_cli/core/ui/: banner.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/: README.md  commands.md  commands.rst  conf.py  installation.md
flow_cli/: __init__.py  main.py
flow_cli/commands/: __init__.py  analyze.py  config.py  doctor.py
flow_cli/commands/android/: __init__.py  build.py  devices.py  flavors.py  install.py  main.py  run.py
flow_cli/commands/deployment/: __init__.py  keystore.py  main.py  release.py  setup.py
flow_cli/commands/generate/: __init__.py  branding.py  icons.py  main.py  splash.py
flow_cli/commands/ios/: __init__.py  devices.py  flavors.py  main.py  run.py
flow_cli/core/: __init__.py  flutter.py
flow_cli/core/ui/: __init__.py  banner.py
scripts/: generate_docs.py
tests/: __init__.py  conftest.py  test_deployment.py  test_doctor.py
